--- a/src/index.css
+++ b/src/index.css
@@ -806,7 +806,7 @@ main {
     color: white;
     font-size: 30px;
     cursor: pointer;
-    margin-left:auto;
+    margin-left: 4px;
   }
 
   .nav-links {
@@ -984,7 +984,7 @@ main {
     color: white;
     font-size: 30px;
     cursor: pointer;
-    margin-left:auto;
+    margin-left: 4px;
   }
 
   .nav-links {
@@ -1267,7 +1267,7 @@ main {
     color: white;
     font-size: 30px;
     cursor: pointer;
-    margin-left:auto;
+    margin-left: 4px;
   }
 
   .nav-links {
